--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,9 +21,9 @@
         
         <input type="text" id="navbar-search" size="40" placeholder="Search accounts">
         <a href="/upload">Upload</a>
-        <button id="logout">Log Out</button>
+        <button class="btn" id="logout">Log Out</button>
         <div class="dropdown">
-          <button class="dropbtn">...</button>
+          <button class="dropbtn">. . .</button>
           <div class="dropdown-content">
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
@@ -31,7 +31,7 @@
           </div>
         </div>
         
-        <button id="login"><a href="/login" id="login-link">Log In</a></button>
+        <button class="btn" id="login"><a href="/login" id="login-link">Log In</a></button>
         
       </nav>
     </header>
