--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 <div class="dashboard-wrapper">
   <section class="dashboard-users">
     <div id="dashboard-loggedin-user">
-      <a href="/users/{{user.id}}">{{user.username}}theprattler</a>
+      <a href="/users/{{user.id}}">{{user.username}}userA</a>
     </div>
     
     <div id="dashboard-users-list">
@@ -9,7 +9,7 @@
         
         <li>
           
-          <a href="/users/{{user.id}}">{{user.username}}user</a>
+          <a href="/users/{{user.id}}">{{user.username}}user1</a>
         </li>
         <li>
           user2
@@ -32,7 +32,7 @@
   <section class="dashboard-pic-feed">
     <ol>
       
-      <li>
+      <li id="feed-pic">
         pic1
       </li>
       <li>
