updated styling on dashboard

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,10 @@ body, html {
   font-family: sans-serif;
 }
 
+main {
+  background-color: lightgray;
+}
+
 a {
   text-decoration: none;
   color: black;
@@ -49,7 +53,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 2%;
+  padding: 0 100px;
 }
 
 /* Pixtagram logo */
@@ -159,7 +163,7 @@ header {
 }
 
 .signup-form, .login-form {
-  border: 1px solid rgba(211, 211, 211, 0.74);
+  border: 1px solid black;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -178,7 +182,7 @@ header {
 }
 
 .text-field {
-  border: 1px solid rgba(211, 211, 211, 0.74);
+  border: 1px solid black;
   border-radius: 5px;
   width: 250px;
   margin-bottom: 7px;
@@ -196,21 +200,20 @@ header {
 }
 
 .dashboard-users {
-  width: 20%;
-  border: 1px solid rgba(211, 211, 211, 0.74);
+  width: 15%;
+  border: 1px solid black;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   justify-content: center;
-  
 }
 
-#dashboard-loggedin-user {
-  border-bottom: 1px solid rgba(211, 211, 211, 0.74);
+#dashboard-users-list-heading {
+  border-bottom: 1px solid black;
   display: flex;
   justify-content: center;
-  padding: 10px 0px;
+  background-color: white;
 }
 
 #dashboard-users-list {
@@ -218,9 +221,17 @@ header {
   justify-content: center;
 }
 
+#dashboard-users-list ul li {
+  padding-bottom: 7px;
+}
+
+#dashboard-users-list ul li a {
+  color: blue;
+}
+
 .dashboard-pic-feed {
-  width: 50%;
-  border: 1px solid rgba(211, 211, 211, 0.74);
+  width: 60%;
+  border: 1px solid black;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
