added upload form to upload handlebar

--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -1,2 +1,10 @@
 <!-- form with an image type and javascript handling form submition that is similar to login -->
 <!-- update the post model to someway store the related upload image; return that similar to comments in the model folder and routes -->
+<!-- form with an image type and javascript handling form submition that is similar to login -->
+<!-- update the post model to someway store the related upload image; return that similar to comments in the model folder and routes -->
+<div>
+    <form method="post" enctype="multipart/form-data" action="/upload">
+        <input type="file" name="file">
+        <input type="submit" value="Submit">
+    </form>
+</div>
