--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -25,16 +25,20 @@
     <ol>
       
       <li id="feed-pic">
-        pic1
+        user posted on Jan 26, 2022
+        <img src="/images/test-one.jpg" height="500" width="500">
+        alien commented "What a creep!"
+        <br>
+        you commented "The other half must be really bad"
       </li>
       <li>
-        pic2
+        
       </li>
       <li>
-        pic3
+        
       </li>
       <li>
-        pic4
+        
       </li>
     </ol>
   </section>
