--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,11 +7,9 @@ html, body {
   padding: 0;
   margin: 0;
   font-family: sans-serif;
-  
 }
 
 main {
-  
   height: 100%;
 }
 
@@ -55,7 +53,7 @@ ul, ol {
 header {
   border-bottom: 1px solid black;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0 100px;
 }
@@ -222,7 +220,8 @@ header {
 /* WRAPPER containing all Login template */
 .login-wrapper {
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: center;
   padding: 125px 0;
 }
 
@@ -234,6 +233,13 @@ header {
   align-items: stretch;
   justify-content: center;
   padding: 25px;
+  opacity: 0.7;
+  margin: 25px;
+}
+
+.signup-form:hover, .login-form:hover {
+  opacity: 1;
+  transition: opacity .3s;
 }
 
 #logo span {
@@ -259,18 +265,17 @@ header {
 /* WRAPPER containing Dashboard template */
 .dashboard-wrapper {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   padding: 75px 0 125px 0;
 }
 
 .dashboard-users {
   width: 15%;
-  border: 1px solid black;
-  border-radius: 5px;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  justify-content: center;
+  justify-content: flex-start;
+  margin: 0 20px;
+  align-items: flex-start;
 }
 
 #dashboard-users-list-heading {
@@ -290,17 +295,16 @@ header {
 }
 
 #dashboard-users-list ul li a {
-  color: blue;
+  color: red;
 }
 
 .dashboard-pic-feed {
-  width: 60%;
-  
   border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   justify-content: center;
+  margin: 0 20px;
 }
 
 #feed-pic {
