--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
   <div class="wrapper">
     <header>
       <h1 id="logo">
-        <a href="/">Pixtagram</a>
+        <a href="/dashboard">Pixtagram</a>
       </h1>
       <nav class="navbar">
         {{#if loggedIn}}
