--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,6 +21,7 @@
         {{#if loggedIn}}
         <input type="text" id="navbar-search" size="40" placeholder="Search accounts">
         <a href="/upload">Upload</a>
+        <button id="upload_widget" class="cloudinary-button">Upload files</button>
         <button class="btn" id="logout">Log Out</button>
         <div class="dropdown">
           <button class="dropbtn">...</button>
@@ -42,6 +43,21 @@
   </div>
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
+  <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+  <script type="text/javascript">  
+    var myWidget = cloudinary.createUploadWidget({
+      cloudName: 'dugddb4bt', 
+      uploadPreset: 'pixtagram'}, (error, result) => { 
+        if (!error && result && result.event === "success") { 
+          console.log('Done! Here is the image info: ', result.info); 
+        }
+      }
+    )
+
+  document.getElementById("upload_widget").addEventListener("click", function(){
+    myWidget.open();
+  }, false);
+</script>
   {{/if}}
 </body>
 
