--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -1,12 +1,23 @@
-<!-- form with an image type and javascript handling form submition that is similar to login -->
-<!-- update the post model to someway store the related upload image; return that similar to comments in the model folder and routes -->
-<div>
-    <h1>| New Post |</h1>
-    <h2>Select an Image:</h2>
-    <form method="post" enctype="multipart/form-data" action="/upload">
-        <input type="file" name="file">
-             <textarea name="comment-body"  placeholder="* Add Comment *"></textarea>
-        <input type="submit" value="Submit">
-    </form>
+<body>
+  <h2>Upload Files Using the Upload Widget</h2>
+  <p>Perform a signed upload using the upload widget.</p>
+  <p>Click "Upload Files" to open the upload widget.</p>
+  <div><button id="upload_widget" class="submit">Upload Files</button></div>
+  <div><img id="uploaded" /></div>
+  <h3>Upload response:</h3>
+  <pre class="data" id="uwdata">
+  
+  </pre>
 
-</div>
+  
+
+  <!-- cloudinary upload widget -->
+  <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+
+  <!-- local upload instantiation -->
+  <script src="../public/javascript/upload.js" type="text/javascript"></script>
+
+  <p>Back to <a href="./dashboard.handlebars">menu</a>.</p>
+</body>
+
+</html>
