--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,8 +42,8 @@
   </div>
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
-  <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
-  <script type="text/javascript">  
+  <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+  <script src="/javascript/upload.js" type="text/javascript">  
     var myWidget = cloudinary.createUploadWidget({
       cloudName: 'dugddb4bt', 
       uploadPreset: 'pixtagram'}, 
