--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,24 +42,43 @@
   </div>
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
+  
+  {{/if}}
+
   <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
   <script src="/javascript/upload.js" type="text/javascript">  
-    var myWidget = cloudinary.createUploadWidget({
-      cloudName: 'dugddb4bt', 
-      uploadPreset: 'pixtagram'}, 
-      
-        (error, result) => { 
-        if (!error && result && result.event === "success") { 
-          console.log('Done! Here is the image info: ', result.info); 
+
+    document.addEventListener('DOMContentloaded', async () => {
+      const response = await fetch('/api/upload');
+      const data = await response.json();
+
+      const options = {
+        cloudName: data.cloudname,
+        apiKey: data.apikey,
+        uploadSignatureTimestamp: data.timestamp,
+        uploadSignature: data.signature,
+        cropping: false,
+        folder: 'sample'
+      }
+
+      const processResults = (error, result) => {
+        if (!error && result && result.event === 'success') {
+          console.log(result)
+
+          var str = JSON.stringify(result, null, 4);
+          document.getElementById('sampledata').innerHTML += str;
         }
       }
-    )
 
-  document.getElementById("upload_widget").addEventListener("click", function(){
-    myWidget.open();
-  }, false);
+      const myWidget = window.cloudinary.createUploadWidget(
+        options,
+        processResults
+      )
+      document
+        .getElementById('upload_widget')
+        .addEventListener('click', () => myWidget.open(), false)
+    })
   </script>
-  {{/if}}
 </body>
 
 </html>
