--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,9 +46,10 @@
   {{/if}}
 
   <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
-  <script src="/javascript/upload.js" type="text/javascript">  
+  <script type="text/javascript">  
 
-    document.addEventListener('DOMContentloaded', async () => {
+    async function uploadEventHandler(event) {
+
       const response = await fetch('/api/upload');
       const data = await response.json();
 
@@ -77,7 +78,8 @@
       document
         .getElementById('upload_widget')
         .addEventListener('click', () => myWidget.open(), false)
-    })
+    }
+    uploadEventHandler();
   </script>
 </body>
 
