stylized comment section

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -35,12 +35,12 @@
     {{#if loggedIn}}
     <form class="comment-form">
       <div>
-        <textarea name="comment-body"></textarea>
+        <textarea name="comment-body" id="comment-body"></textarea>
       </div>
 
       <div>
-        <button href="" type="submit">add comment</button>
-        <button type="button" class="upvote-btn">upvote</button>
+        <button href="" type="submit" class="btn">add comment</button>
+        <button type="button" class="btn" id="upvote-btn">upvote</button>
       </div>
     </form>
     {{/if}}
