--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -324,6 +324,18 @@ header {
   flex-direction: column;
 }
 
+#comment-body {
+  width: 100%;
+  height: 50px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f8f8f8;
+  font-size: 16px;
+  resize: none;
+}
+
 /* FOOTER */
 footer {
   border-top: 1px solid black;
